Revision history for Perl extension Catalyst::Plugin::Authentication

0.10009 2008-11-27
        - Including progressive realm for multiple authentication attempts
          in a single request.

0.10008 2008-10-23
		- Updating config to allow for inclusion of realm ref's in the main
		  config hash rather than in a subref called 'realms'

0.10007 2008-08-17
	- Update tests prereqs to include Test::Exception (RT #36339)
        - Some documentation fixes (including RT #36062)
        - Compatibility fix where the use of new style config and old
          style Authentication::Store::Minimal would cause a crash 
          (Reported & fixed by Jos Boumans C<kane@cpan.org>)
        - Documentation update on Password - to indicate proper field naming
        - Decouple Authentication system from session.  The realm class
          now allows complete control over how a user is persisted across
          requests.
        - pod fixes (RT #36062, RT #36063)

0.10006 2008-02-15
        - Additional documentation for Realms
        - Added update_user_in_session routine to allow re-saving of user data
          into the session.

0.10005 2008-01-24
        - Bugfix release - correcting 'Plugin::Authentication' configuration
          problem.

0.10004 2007-12-04
        - Added some code for back-compatibility

0.10003 2007-12-02
        - Added a "Null" store for credentials that don't require real stores.
        - Make realms bonafide objects
        - Added auto_update_user and auto_create_user options to the Realm object
        - Doc updates

        [POSSIBLE INCOMPATIBILITIES]
        - authenticate() in credentials are now passed a realm object instead of
          a store object. A realm object still implements find_user() so unless
          you're doing something special you won't notice the difference.

0.10002 2007-07-22
        - $user->store() should NOT be set by C::P::Auth - if it's needed - it